welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: value &&! is not a member of Boolean
	while (!porteBiscuit()&&!estFaceMur()) {
                              ^